--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <audio id="bip" src="media/bip.mp3" preload="auto" style="display:none">No audio!</audio>
 
-<div style="position: absolute; left: 1%; right: 1%; top: 50%; transform: translateY(-50%);">
+<div style="position: absolute; left: 1%; right: 1%; top: 50%; transform: translateY(-50%); margin-top: 24px;">
 
-<div style="display: flex; width: 70%; background-color: #888888AA; align-items: center; justify-content: center; margin: auto; margin-top: 12px; padding: 12px; border: 6px solid black; border-radius: 12px;">
+<div style="display: flex; width: 70%; background-color: #888888AA; align-items: center; justify-content: center; margin: auto; margin-top: 32px; padding: 12px; border: 6px solid black; border-radius: 12px;">
  <div id="a" style="width: max-content; padding: 3px; cursor: pointer;" onclick="type('A')"><img src="letters/a.jpg" style="width: auto; height: 8.5vw;"></div>
  <div id="b" style="width: max-content; padding: 3px; cursor: pointer;" onclick="type('B')"><img src="letters/b.jpg" style="width: auto; height: 8.5vw;"></div>
  <div id="c" style="width: max-content; padding: 3px; cursor: pointer;" onclick="type('C')"><img src="letters/c.jpg" style="width: auto; height: 8.5vw;"></div>
@@ -48,7 +48,7 @@
  <div id="space" style="width: 50px; min-height: 30px; max-height: 116px; background-color: #DDD; text-align: center; margin: 6px 6px 8px; padding: 4px; border: 3px solid #666; cursor: pointer;" onclick="type(' ')">__</div>
 </div>
 
-<div style="display: flex; width: 60%; background-color: #888888AA; align-items: center; justify-content: center; margin: auto; margin-top: 12px; padding: 12px; border: 6px solid black; border-radius: 12px;">
+<div style="display: flex; width: 60%; background-color: #888888AA; align-items: center; justify-content: center; margin: auto; margin-top: 12px; margin-bottom: 24px; padding: 12px; border: 6px solid black; border-radius: 12px;">
  <input type="text" id="spells" name="spells" style="width: 100%; min-height: 40px; max-height: 60px; font-size: 3vw; text-align: center;" />
 </div>
 
