--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   width: 100%;
   min-height: 40px;
   max-height: 60px;
+  background-color: #F5DEB3CC /* Wheat #F5DEB3 - Almond: #EADDCA */;
+  color: #6F4E37 /* Coffee : #6F4E37 */;
   font-size: 3vw;
   text-align: center;
   margin-left: 24px;
@@ -78,7 +80,7 @@
 <div class="centeredContainer" style="position: absolute; left: 1%; right: 1%; top: 50%; transform: translateY(-50%);">
 
 <div class="textInput">
- <input type="text" id="spells" class="enchantment" />
+ <input type="text" id="spells" class="enchantment" disabled disabled="disabled" readonly="readonly" />
  <div id="erase" class="erase" onclick="type('erase')">
   <img src="images/eraser.png" style="width: auto; height: 5vw; margin-left: 12px;">
  </div>
