--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
  <meta charset="utf-8">
  <title>Minecraft-Type-Inator</title>
  <style>
+ body {
+  height: 100vh;
+  background-color: gray;
+  background-image: url('images/background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+ }
  div.textInput {
   display: flex;
   width: 98%;
@@ -73,11 +81,11 @@
  </style>
 </head>
 
-<body style="background-color: black; background-image: url('images/background.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%;">
+<body>
 
 <audio id="enchant" src="media/enchant.mp3" preload="auto" style="display:none">No audio!</audio>
 
-<div class="centeredContainer" style="position: absolute; left: 1%; right: 1%; top: 50%; transform: translateY(-50%);">
+<div class="centeredContainer" style="position: absolute; left: 1%; right: 1%; top: 50%; transform: translateY(-50%); margin-top: 2%; margin-bottom: 6%;">
 
 <div class="textInput">
  <input type="text" id="spells" class="enchantment" disabled disabled="disabled" readonly="readonly" />
