--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
   gap: 12px;
   width: max-content;
   }
- div.centeredContainer { margin-top: 1%; margin-bottom: 6px; }
+ .lettersImg { height: 14vw; }
+ div.centeredContainer { margin-top: 0px; margin-bottom: 6px; }
  }
-
  </style>
 </head>
 
