--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   position: absolute;
   left: 1%; right: 1%; top: 50%;
   transform: translateY(-50%);
-  margin-top: 3%;
-  margin-bottom: 12px;
+  margin-top: 1%;
+  margin-bottom: 24px;
  }
  div.textInput {
   display: flex;
@@ -89,7 +89,7 @@
   cursor: pointer;
  }
  /* Use a media query to add a break point at 800px: */
- @media screen and (max-width: 800px) {
+ @media screen and (max-width: 960px) {
  div.characterRow {
   display: grid;
   grid-template-columns: auto;
@@ -100,6 +100,7 @@
   gap: 12px;
   width: max-content;
   }
+ input.enchantment { height: 80px; font-size: 6vw; }
  .lettersImg { height: 14vw; }
  div.centeredContainer { margin-top: 0px; margin-bottom: 6px; }
  }
@@ -163,7 +164,6 @@ spells = document.getElementById("spells")
 spells.value += arg; 
 if (arg == 'erase') { spells.value = ""; }
 enchant.play()
-console.log(window.innerHeight)
 }
 </script>
 
